[package]
name = "treeleaves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.27"
chrono = "0.4.23"
rusqlite = { version = "0.28.0", features = ["bundled"] }
walkdir = "2.3.2"
hex = "0.4.3"
digest = "0.10.6"
md-5 = "0.10.5"
sha1 = "0.10.5"
lazy_static = "1.4.0"
regex = "1.7.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
